@@ -37,6 +37,7 @@ in the indentation space of a line.
 +Fix Codebrowser not refreshing when files are opened from the file dialog
 on Linux.
 +Fix error that could occur while trying to save filehistory on exit.
++Fix toolbar not resizing properly when changing icon size.
 
 #-----------------------------------------------------------------------------#
 
